--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 Device Tracker",
-  "documentation": "https://gcobb321.github.io/icloud3_v3_docs/#/",
+  "name": "iCloud3 v3 Device Tracker",
+  "documentation": "https://gcobb321.github.io/icloud3_v3/#/",
   "issue_tracker": "https://github.com/gcobb321/icloud3/issues",
   "dependencies": [],
   "codeowners": ["@gcobb321"],
