--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: HACS Action
+aname: HACS Action
 
 on:
   push:
@@ -14,4 +14,4 @@ jobs:
       - name: HACS Action
         uses: "hacs/action@main"
         with:
-          category: "CHANGE_ME!"
+          category: "integration"
