--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 v3 iDevice Tracker",
+  "name": "iCloud3 v3",
+  "after_dependencies": [],
   "codeowners": ["@gcobb321"],
   "config_flow": true,
-  "dependencies": [],
-  "after_dependencies": ["recorder", "ios"],
-  "iot_class": "cloud_polling",
+  "dependencies": ["recorder"],
   "documentation": "https://gcobb321.github.io/icloud3_v3/#/",
+  "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/gcobb321/icloud3_v3/issues",
   "requirements": [],
   "version": "3.0.0"
