--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 v3",
+  "name": "iCloud3 v3: iDevice Tracker",
   "after_dependencies": ["recorder", "ios"],
   "codeowners": ["@gcobb321"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://gcobb321.github.io/icloud3_v3/#/",
+  "documentation": "https://gcobb321.github.io/icloud3_v3_docs/#/",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/gcobb321/icloud3_v3/issues",
   "requirements": [],
-  "version": "3.0.0"
+  "version": "3.0"
 }
