--- a/custom_components/icloud3/services.yaml
+++ b/custom_components/icloud3/services.yaml
@@ -1,43 +1,78 @@
 # yamllint disable rule:document-start
 # yamllint disable rule:line-length
 
-icloud3_action:
-  description: This service allows you to change the way iCloud3 operates.
+action:
+  name: "Action"
+  description: "This service will send operational commands to iCloud3"
   fields:
-    device_name:
-      description: Name of the device to be updated. All devices will be updated if this parameter is not specified. (Optional)
-      example: gary_iphone
     command:
-      description: The action to be performed. (Required)
-      example: log_level debug
+      name: "Command"
+      description: "(Required) The action to be performed"
+      required: true
+      example: "pause"
+      selector:
+        select:
+          options:
+            - "Restart iCloud3"
+            - "Pause Tracking"
+            - "Resume Tracking"
+            - "Locate Device(s) using iCloud FamShr"
+            - "Send Locate Request to iOS App"
+    device_name:
+      name: "Device Name"
+      description: "(Optional) Apply all devices or only apply to the selected device"
+      example: "Gary (gary_iphone)"
+      selector:
+        device:
+          filter:
+            integration: icloud3
 
-icloud3_update:
-  description: This service allows you to change the way iCloud3 operates.
+update:
+  name: "Update"
+  description: "The Update service has been replaced by the Action service"
+
+restart:
+  name: "Restart"
+  description: "This service will restart iCloud3"
+
+lost_device_alert:
+  name: "Send Lost Device Message"
+  description: "This service will send a Message and Phone number to the lost iPhone"
   fields:
     device_name:
-      description: Name of the device to be updated. All devices will be updated if this parameter is not specified. (Optional)
-      example: gary_iphone
-    command:
-      description: The action to be performed. (Required)
-      example: log_level debug
+      name: "Device Name"
+      description: "Device the Find iPhone Alert and Message should be sent to"
+      required: true
+      example: "Gary (gary_iphone)"
+      selector:
+        device:
+          filter:
+            integration: icloud3
+    number:
+      name: "Phone Number"
+      description:  "The phone number to send the message to"
+      example: "123-456-7890"
+      required: true
+      selector:
+        text:
+    message:
+      name: "Message"
+      description: "The message to be sent"
+      example: "This Phone has been lost. Please call this number to report it found."
+      required: true
+      selector:
+        text:
 
-icloud3_restart:
-  description: This service will refresh all of the devices being handled by iCloud3 and can be used when you have added a new device to your Apple account. You will have to restart Home Assist if you have made changes to the platform parameters (new device type, new device name, etc.)
-  fields:
-    account_name:
-      description: account_name of the iCloud3 custom component specified in the Configuration Variables section described at the beginning of this document. (Required)
-      example: gary_icloud
-
-icloud3_lost_iphone:
-  description: This service will play the Lost iPhone sound on a specific device.
+find_iphone_alert:
+  name: "Find iPhone Alert Tone"
+  description: "This service will send an alert tone to the device that you want to find"
   fields:
     device_name:
-      description: Name of the device to be located (required).
-      example: gary_icloud
-
-icloud3_find_phone_alert:
-  description: This service will send a find phone message to the specific device.
-  fields:
-    device_name:
-      description: Name of the device to be located (required).
-      example: gary_icloud
+      name: "Device Name"
+      description: "Device the alert should be sent to"
+      required: true
+      example: "Gary (gary_iphone)"
+      selector:
+        device:
+          filter:
+            integration: icloud3
