--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 v3: iDevice Trackerx",
+  "name": "iCloud3 v3: iDevice Tracker",
   "after_dependencies": ["recorder", "ios", "mobile_app", "device_tracker", "sensor"],
   "codeowners": ["@gcobb321"],
   "config_flow": true,
