iCloud3 v3, Release Candidate 3

--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 v3: iDevice Tracker",
-  "after_dependencies": ["recorder", "ios", "mobile_app", "device_tracker", "sensor"],
+  "name": "iCloud3 v3",
+  "after_dependencies": ["recorder", "ios"],
   "codeowners": ["@gcobb321"],
   "config_flow": true,
   "dependencies": [],
